thumbnail image for the webpage (social media)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="assets/css/main.css">
 		<link rel="canonical" href="https://fixtures.blackducks.au/">
 		<meta name="theme-color" content="#ffffff">
+		<link rel="image_src" href="https://fixtures.blackducks.au/thumbnail.jpg" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 	</head>
 	<body class="is-loading">
