Full Social Meta tags

--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
 	<head>
 		<title>SDFC Fixtures</title>
 		<meta charset="utf-8">
+		<link rel="canonical" href="https://fixtures.blackducks.au/">
+		<meta name="description" content="SDFC Fixtures in iCalendar format, for fans to use in their own calendar apps.">
+		<link rel="image_src" href="https://fixtures.blackducks.au/thumbnail.jpg" />
+		<meta property="og:url" content="http://fixtures.blackducks.au">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="SDFC Fixtures">
+		<meta property="og:description" content="SDFC Fixtures in iCalendar format, for fans to use in their own calendar apps.">
+		<meta property="og:image" content="https://fixtures.blackducks.au/thumbnail.jpg">
+		<meta property="twitter:domain" content="fixtures.blackducks.au">
+		<meta property="twitter:url" content="http://fixtures.blackducks.au">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="SDFC Fixtures">
+		<meta name="twitter:description" content="SDFC Fixtures in iCalendar format, for fans to use in their own calendar apps.">
+		<meta name="twitter:image" content="https://fixtures.blackducks.au/thumbnail.jpg">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="assets/css/main.css">
-		<link rel="canonical" href="https://fixtures.blackducks.au/">
-		<meta name="theme-color" content="#ffffff">
-		<link rel="image_src" href="https://fixtures.blackducks.au/thumbnail.jpg" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
 	</head>
 	<body class="is-loading">
