*Codeberg* or Github

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					Desktop users who need to manually <i>subscribe</i> can copy a calendar link by right clicking on the <img src="assets/icons/calendar.svg" alt="Calendar Logo" width="16" height="16"> calendar icon and clicking "Copy Link". Mobile users can do the same by holding your finger down on the calendar icon and tapping "Copy link address" or something similar, these menus can vary by device/OS. Just make sure you <i>subscribe</i> using the link (do not download/upload the calendar), otherwise you won't receive future updates, like broadcast information or results as they become available.
 				</p>
 				<p>
-					These calendars are based on our <a href="https://wafl.com.au/fixtures-and-results">official WAFL fixtures</a>, but are provided here openly and collaboratively by members of our community, for ease of use (in your own calendar app). All files/code for the calendars and this website can be viewed and contributed to on Github using the link at the bottom of this page.
+					These calendars are based on our <a href="https://wafl.com.au/fixtures-and-results">official WAFL fixtures</a>, but are provided here openly and collaboratively by members of our community, for ease of use (in your own calendar app). All files/code for the calendars and this website can be viewed and contributed to on Codeberg or Github using the link at the bottom of this page.
 				</p>
 				<h2>League</h2>
 				<div>
