Remove trailing slash and extend page title

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 -->
 <html lang="en-au">
 	<head>
-		<title>SDFC Fixtures</title>
+		<title>Swan Districts Football Club Fixtures</title>
 		<meta charset="utf-8">
 		<link rel="canonical" href="https://fixtures.blackducks.au/">
 		<meta name="description" content="SDFC Fixtures in iCalendar format, for fans to use in their own calendar apps.">
-		<link rel="image_src" href="https://fixtures.blackducks.au/assets/thumbnail.jpg" />
+		<link rel="image_src" href="https://fixtures.blackducks.au/assets/thumbnail.jpg">
 		<meta property="og:url" content="http://fixtures.blackducks.au">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="SDFC Fixtures">
